--- a/css/style.css
+++ b/css/style.css
@@ -22,39 +22,67 @@ body {
   align-items: center; }
 
 .card {
-  min-width: 80%;
+  max-width: 80%;
+  max-height: 60rem;
   background-color: #1b1938;
   border-radius: 1rem;
   display: flex;
+  flex-direction: row;
   margin-bottom: 1rem; }
+  @media only screen and (max-width: 37.5em) {
+    .card {
+      flex-direction: column;
+      min-width: 70%;
+      min-height: 50rem; } }
   .card__details {
     width: 45%;
     padding: 6rem;
     display: flex;
-    flex-direction: column; }
+    flex-direction: column;
+    text-align: center; }
+    @media only screen and (max-width: 37.5em) {
+      .card__details {
+        width: 100%;
+        order: 2;
+        padding: 2rem; } }
   .card__title {
     font-size: 3rem;
     margin-bottom: 4.5rem;
     font-weight: 700; }
     .card__title--insights {
       color: #aa5cdb; }
+    @media only screen and (max-width: 37.5em) {
+      .card__title {
+        font-size: 1.8rem;
+        margin-bottom: 3rem; } }
   .card__para {
     margin-bottom: 6.5rem;
     font-family: 'Inter', sans-serif;
-    font-size: 14px;
+    font-size: 1.4rem;
     font-weight: 400; }
+    @media only screen and (max-width: 37.5em) {
+      .card__para {
+        font-size: 1.1rem;
+        margin-bottom: 5rem; } }
   .card__list {
     list-style: none;
     display: flex;
     justify-content: space-around; }
   .card__listItem {
-    width: 100px;
+    width: 10rem;
     font-size: 1.8rem;
     font-weight: 700; }
+    @media only screen and (max-width: 37.5em) {
+      .card__listItem {
+        width: 5rem;
+        font-size: 1.3rem; } }
     .card__listItem--light {
       font-family: 'Inter', sans-serif;
       font-weight: 400;
       font-size: 1.6rem; }
+      @media only screen and (max-width: 37.5em) {
+        .card__listItem--light {
+          font-size: 1.2rem; } }
   .card__image {
     width: 55%;
     background-image: linear-gradient(to right, rgba(170, 92, 219, 0.5), rgba(170, 92, 219, 0.5)), url("../images/image-header-desktop.jpg");
@@ -62,3 +90,9 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     border-radius: 0 1rem 1rem 0; }
+    @media only screen and (max-width: 37.5em) {
+      .card__image {
+        width: 100%;
+        height: 25rem;
+        order: 1;
+        border-radius: 1rem 1rem 0 0; } }
