--- a/sass/component/_card.scss
+++ b/sass/component/_card.scss
@@ -1,19 +1,32 @@
 .card {
-    min-width: 80%;
+    max-width: 80%;
+    max-height: 60rem;
     background-color: $color-secondary;
     border-radius: 1rem;
     display: flex;
+    flex-direction: row;
     margin-bottom: 1rem;
+
+    @include respond(phone){
+        flex-direction: column;
+        min-width: 70%;
+        min-height: 50rem;
+        // align-content: center;
+    }
 
     &__details {
         width: 45%;
         padding: 6rem;
         display: flex;
         flex-direction: column;
+        text-align: center;
 
-        // &:not(:last-child) {
-        //     margin-bottom: 1.5rem;
-        // }
+        @include respond(phone){
+            width: 100%;
+            order: 2;
+            padding: 2rem;
+            // align-content: center;
+        }
     }
 
     &__title{
@@ -24,13 +37,23 @@
         &--insights{
             color: $color-tertiary;
         }
+
+        @include respond(phone){
+            font-size: 1.8rem;
+            margin-bottom: 3rem;
+        }
     }
 
     &__para{
         margin-bottom: 6.5rem;
         font-family: 'Inter', sans-serif;
-        font-size: 14px;
+        font-size: 1.4rem;
         font-weight: 400;
+
+        @include respond(phone){
+           font-size: 1.1rem;
+           margin-bottom: 5rem;
+        }
     }
 
     &__list{
@@ -40,14 +63,22 @@
     }
 
     &__listItem{
-        width: 100px;
+        width: 10rem;
         font-size: 1.8rem;
         font-weight: 700;
+
+        @include respond(phone){
+            width: 5rem;
+            font-size: 1.3rem;
+         }
 
         &--light{
             font-family: 'Inter', sans-serif;
             font-weight: 400;
             font-size: 1.6rem;
+            @include respond(phone){
+                font-size: 1.2rem;
+             }
         }
     }
 
@@ -58,5 +89,12 @@
         background-size: cover;
         background-repeat: no-repeat;
         border-radius: 0 1rem 1rem 0;
+
+        @include respond(phone){
+            width: 100%;
+            height: 25rem;
+            order: 1;
+            border-radius: 1rem 1rem 0 0;
+        }
     }
 }
