add: screenshot added

--- a/css/style.css
+++ b/css/style.css
@@ -38,13 +38,13 @@ body {
     width: 45%;
     padding: 6rem;
     display: flex;
-    flex-direction: column;
-    text-align: center; }
+    flex-direction: column; }
     @media only screen and (max-width: 37.5em) {
       .card__details {
         width: 100%;
         order: 2;
-        padding: 2rem; } }
+        padding: 2rem;
+        text-align: center; } }
   .card__title {
     font-size: 3rem;
     margin-bottom: 4.5rem;
