--- a/css/style.css
+++ b/css/style.css
@@ -96,3 +96,16 @@ body {
         height: 25rem;
         order: 1;
         border-radius: 1rem 1rem 0 0; } }
+
+.attribution {
+  font-size: 11px;
+  text-align: center; }
+  .attribution__link {
+    color: #aa5cda;
+    text-decoration: none;
+    font-size: 1.4rem;
+    display: inline-block;
+    transition: all .2s; }
+    .attribution__link:hover, .attribution__link:active {
+      transform: rotate(5deg);
+      box-shadow: 0 1rem 15rem rgba(0, 0, 0, 0.4); }
